Login positioned correctly on mobile

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -50,6 +50,14 @@ li > a {
 a {
   text-decoration: none;
 }
+/*  Remove tap highlight on iOS */
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 
 /* Navigation */
 nav a:hover:not(.active) {
